--- a/src/components/ProblemStatement/ProblemStatement.css
+++ b/src/components/ProblemStatement/ProblemStatement.css
@@ -206,6 +206,10 @@
   margin : 15px 0;
 }
 
+#ProblemStatement__instructions ul li b {
+  font-size: 0.91rem;
+}
+
 #ProblemStatement__lockst {
   display: flex;
   flex-direction: row;
