--- a/src/components/EventOverview/EventOverview.css
+++ b/src/components/EventOverview/EventOverview.css
@@ -46,11 +46,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding : 0 15px;
 }
 
 #EventOverview__timelinesoondiv h3 {
   margin-top : 20px;
-  font-size: 1.2rem;
+  font-size: 1.05rem;
   font-weight: 500;
   font-family: Inter;
   font-style: normal;
@@ -58,14 +59,14 @@
 }
 
 #EventOverview__timelinesoondiv h4 {
-  font-size: 16px;
+  font-size: 0.97rem;
   font-weight: 500;
   margin-top: 12px;
   font-family: Inter;
   font-style: normal;
   line-height: 20px;
   letter-spacing: 0.15px;
-  color: #3d3d3d;
+  color: rgb(171 171 171);
 }
 
 #EventOverview__start h3 {
