--- a/src/components/ReviewsPage/ReviewsPage.css
+++ b/src/components/ReviewsPage/ReviewsPage.css
@@ -78,6 +78,7 @@
   margin-top: -12px;
   font-size: 0.9rem;
   color :rgba(194, 194, 194, 1);
+  font-family: NeueMontreal-Regular !important,
 }
 #ReviewsPage__form input , #ReviewsPage__form textarea {
   color: rgba(20, 20, 20, 1) !important;
