--- a/src/components/ReviewsPage/ReviewsPage.css
+++ b/src/components/ReviewsPage/ReviewsPage.css
@@ -1,4 +1,63 @@
 #ReviewsPage__container {
+  display : flex;
+  justify-content: center;
+  align-items: center;
+  height : 100%;
+  width : 100%;
+}
+
+#ReviewsPage__reviewended {
+  background-image: url(
+    "../../assets/rounds_ended.png"
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+  width : 557px;
+  height : 392px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding : 0 10px;
+}
+
+#ReviewsPage__btn {
+  background-color: rgba(86, 58, 232, 1);
+  padding : 13px 18px;
+  border-radius : 8px;
+  font-size: 0.8rem;
+  font-family: "Inter";
+  color : white;
+  cursor : pointer;
+  margin : 25px 0 0 0 ;
+}
+#ReviewsPage__btn:hover {
+  background-color: rgba(105, 79, 239, 1);
+}
+
+#ReviewsPage__btn:active
+{
+  background-color : rgba(56, 27, 202, 1);
+}
+
+#ReviewsPage__reviewended h3 {
+  color : #FFFFFF;
+  font-size: 1.35rem;
+  font-family: "Inter";
+}
+
+#ReviewsPage__reviewended p {
+  color : white;
+  font-size: 1rem;
+  margin-top: 15px;
+  font-family: "Inter";
+}
+
+#ReviewsPage__reviewended p:nth-child(4) {
+  font-size: 0.9rem;
+}
+/*#ReviewsPage__container {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -124,4 +183,4 @@
   font-family: NeueMontreal-Regular !important;
   font-weight: 600;
   letter-spacing: 0.5px;
-}
+}*/
